--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "subgraph",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "token-swap",
+  "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "codegen": "graph codegen",
+    "build": "graph build",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ token-swap",
+    "create-local": "graph create --node http://localhost:8020/ token-swap",
+    "remove-local": "graph remove --node http://localhost:8020/ token-swap",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 token-swap",
+    "test": "graph test"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@graphprotocol/graph-cli": "0.95.0",
+    "@graphprotocol/graph-ts": "0.36.0"
+  },
+  "devDependencies": { "matchstick-as": "0.6.0" }
 }
