--- a/token-swap/package.json
+++ b/token-swap/package.json
@@ -19,6 +19,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3",
     "viem": "^2.22.17",
     "wagmi": "^2.14.9"
